--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/partials/themes";
 
 .footer {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
