--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/partials/themes";
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   display: flex;
   flex-direction: column;
