--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/partials/themes";
 
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 30vh;
   display: flex;
   flex-direction: column;
