--- a/components/Project/Project.module.scss
+++ b/components/Project/Project.module.scss
@@ -3,12 +3,34 @@
 @import "../../styles/partials/themes";
 
 .project {
-  width: 350px;
-  height: 200px;
-  background-color: grey;
-}
+  width: 100%;
+  height: auto;
+  margin: 2rem 0;
+  padding: 1rem;
+  border: 2px solid $kv-white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 
-.hed,
-.subhed {
-  color: $kv-white;
+  &__tech {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+
+  &__tech-name {
+    margin: 0 1rem;
+  }
+
+  &__tech-subhed {
+    color: $kv-white;
+  }
+
+  &__tech-desc {
+    color: $kv-white;
+    margin: 1rem 0 0 1rem;
+  }
 }
