--- a/components/ProjectList/ProjectList.module.scss
+++ b/components/ProjectList/ProjectList.module.scss
@@ -3,8 +3,8 @@
 @import "../../styles/partials/themes";
 
 .projectList {
-  width: 100vw;
-  height: 30vh;
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
