--- a/components/Project/Project.module.scss
+++ b/components/Project/Project.module.scss
@@ -7,8 +7,6 @@
   height: auto;
   margin: 2rem 0;
   padding: 1rem;
-  border: 2px solid $kv-white;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,18 +32,14 @@
     margin: 1rem 0 0 1rem;
   }
 
-  &__links {
+  &__buttons {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 2rem 0;
   }
 
-  &__links-name {
-    font-size: 16px;
-  }
-
-  &__tech-link {
+  &__button-link {
     color: $kv-white;
     margin: 0 1rem;
     text-decoration: none;
@@ -54,7 +48,7 @@
     border-radius: 10px;
   }
 
-  &__tech-link:hover {
+  &__button-link:hover {
     text-decoration: underline;
   }
 }
