--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -6,9 +6,17 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  padding: 2rem;
+  align-items: center;
   background-color: $kv-black;
+  padding-top: 1rem;
+  background-color: black;
+
+  &__logoList {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
 
 .hed,
