--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,12 +4,12 @@
 
 .header {
   width: 100%;
-  height: 10vh;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 2rem;
-  background-color: $kv-black;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: black;
 }
 
 .hed,
