--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -10,6 +10,7 @@
   background-color: $kv-black;
   padding-top: 1rem;
   background-color: black;
+  border-top: 2px solid $kv-white;
 
   &__logoList {
     width: 70%;
