--- a/components/Project/Project.module.scss
+++ b/components/Project/Project.module.scss
@@ -5,7 +5,6 @@
 .project {
   width: 100%;
   height: auto;
-  margin: 1rem 0;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -43,9 +42,13 @@
     color: $kv-white;
     margin: 0 1rem;
     text-decoration: none;
-    padding: 0.8rem 2rem;
+    padding: 0.8rem 1rem;
     border: 1px solid $kv-white;
     border-radius: 10px;
+    min-width: 140px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   &__button-link:hover {
