--- a/components/ProjectList/ProjectList.module.scss
+++ b/components/ProjectList/ProjectList.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 2rem;
+  padding: 2rem 0;
   background-color: $kv-black;
 }
 
