--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -13,13 +13,14 @@
 
 .modal-item {
   color: $kv-white;
-  width: 100vw;
+  width: 100%;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0;
   font-size: 28px;
+  text-decoration: none;
 }
 
 .modal-item:hover {
