Mobile MVP styling

--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -23,6 +23,10 @@
   text-decoration: none;
 }
 
+.modal-link {
+  text-decoration: none;
+}
+
 .modal-item:hover {
   background-color: darkgrey;
 }
