--- a/components/ProjectList/ProjectList.module.scss
+++ b/components/ProjectList/ProjectList.module.scss
@@ -6,7 +6,8 @@
   width: 100%;
   height: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding: 2rem 0;
   background-color: $kv-black;
